Fixed background image not covering the viewport

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     background-image: url(images/is16062-image-kwvyfkwr.jpg);
     background-repeat: no-repeat ;
     background-position-x: center;
-    background-size: auto 100vh;
+    background-size: cover;
     background-attachment:fixed;
 }
 
@@ -44,7 +44,7 @@ main {
 img {
     width: 80%;
     max-width: initial;
-    margin: 10%;
+    margin: 0 10%;
 }
 
 .item {
